# ssb-project-cli

./: .cookiecutter.json  .cruft.json  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-policy.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  backstage.yaml  codecov.yml  conf.py  gen_ref_pages.py  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: constraints.txt  documentation.yml  labeler.yml  release.yml  scheduled-update.yml  tests.yml
CODE_OF_CONDUCT/: index.html
codeofconduct/: index.html
contributing/: index.html
create-github-repo/: create-github-repo.py
create_github_repo/: create-github-repo.py
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
hurtigstart/: build_cmds.md  hurtigstart_cli.py
license/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/ssb_project_cli/: index.html
reference/ssb_project_cli/create_github_repo/: index.html
reference/ssb_project_cli/create_github_repo/create-github-repo/: index.html
reference/ssb_project_cli/ssb_project/: index.html
reference/ssb_project_cli/ssb_project/app/: index.html
reference/ssb_project_cli/ssb_project/clean/: index.html
reference/ssb_project_cli/ssb_project/clean/clean/: index.html
reference/ssb_project_cli/ssb_project/create/: index.html
reference/ssb_project_cli/ssb_project/create/create/: index.html
reference/ssb_project_cli/ssb_project/create/github/: index.html
reference/ssb_project_cli/ssb_project/create/local_repo/: index.html
reference/ssb_project_cli/ssb_project/create/prompt/: index.html
reference/ssb_project_cli/ssb_project/create/repo_privacy/: index.html
reference/ssb_project_cli/ssb_project/create/temp_git_repo/: index.html
reference/ssb_project_cli/ssb_project/settings/: index.html
reference/ssb_project_cli/ssb_project/util/: index.html
search/: search_index.json
src/dapla_hurtigstart_cli/: __init__.py  __main__.py
src/ssb_project_cli/: __init__.py  __main__.py  config.py
src/ssb_project_cli/create_github_repo/: __init__.py  create-github-repo.py
src/ssb_project_cli/hurtigstart/: build_cmds.md
src/ssb_project_cli/ssb_project/: __init__.py  app.py  environment.py  poetry.py  settings.py  util.py
src/ssb_project_cli/ssb_project/clean/: __init__.py  clean.py
src/ssb_project_cli/ssb_project/create/: __init__.py  create.py  github.py  local_repo.py  prompt.py  repo_privacy.py  temp_git_repo.py
src/ssb_project_cli/ssb_project/upgrade/: __init__.py  upgrade.py
tests/: __init__.py  conftest.py  test_app.py  test_create.py  test_create_github.py  test_delete_folder.py  test_help.py  test_hurtigstart.py  utils_test.py
tests/build_test/: __init__.py  test_build.py  test_environment.py  test_poetry.py
tests/clean_test/: test_clean.py
tests/create_test/: __init__.py  test_create.py  test_delete_folder.py  test_github.py  test_local_repo.py
tests/integration/: test_build.py  test_create.py  test_integration.py  test_upgrade.py
tests/unit/: test_cli.py  test_help.py  test_utils.py  utils_test.py
tests/unit/build_test/: test_build.py  test_environment.py  test_poetry.py  test_temp_template_repo.py
tests/unit/build_test/test_files/: test_nexus_source_add_pyproject.toml  test_nexus_source_update_pyproject.toml
tests/unit/clean_test/: __init__.py  test_clean.py
tests/unit/create_test/: test_create.py  test_delete_folder.py  test_github.py  test_local_repo.py  test_memory_check.py  test_prompt.py
typing-cli/: README.md  hurtigstart_cli.py
usage/: index.html
