[tool.poetry]
name = "ssb-project-cli"
version = "1.3.2"
description = "SSB Project CLI"
authors = ["Statistics Norway <stat-dev@ssb.no>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/statisticsnorway/ssb-project-cli"
repository = "https://github.com/statisticsnorway/ssb-project-cli"
documentation = "https://ssb-project-cli.readthedocs.io"
packages = [{ include = "ssb_project_cli", from = "src" }]
classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry.urls]
Changelog = "https://github.com/statisticsnorway/ssb-project-cli/releases"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = ">=0.6.1"
gitpython = ">=3.1.27"
pygithub = ">=1.55"
cruft = ">=2.11.1"
rich = ">=12.5.1"
requests = ">=2.28.1"
types-toml = ">=0.10.8"
questionary = ">=1.10.0"
psutil = ">=5.9.4"
types-urllib3 = ">=1.26.25.10"
types-requests = ">=2.28.11.17"
types-psutil = ">=5.9.5.12"
kvakk-git-tools = ">=2.2.1"
poetry = ">=1.5.0"
jupyter-client = ">=8.3.1"
ipykernel = ">=6.25.2"
tomli = ">=2.0.1"

[tool.poetry.group.dev.dependencies]
pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=7.2.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
mock = ">=4.0.3"
build = ">=0.8.0"
jinja2 = ">=3.1.2"
nox = ">=2022.11.21"
nox-poetry = ">=1.0.2"
tomli-w = ">=1.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs-typer = ">=0.0.3"
mkdocs = ">=1.4.0"
mkdocstrings-python = ">=1.3.0"
mkdocstrings = "*"
mkdocs-literate-nav = ">=0.5.0"
mkdocs-section-index = ">=0.3.4"
mkdocs-material = ">=9.0.0"
mkdocs-gen-files = ">=0.4.0"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
mock = "^4.0.3"
mkdocs-click = "^0.8.0"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
build = ">=0.8.0"
Jinja2 = "^3.1.2"
furo = ">=2021.11.12"

[tool.poetry.scripts]
ssb-project = "ssb_project_cli.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["ssb_project_cli", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
